[package]
name = "uiuifree-elastic"
version = "0.1.26"
edition = "2021"

authors = ["uiuifree"]
description = "My ElasticSearch Util"
license = "MIT"

[dependencies]
dotenv = "0.15"
elasticsearch = "7.14.0-alpha.1"
#elastic-query-builder = { path="../elastic-query-builder" }
#elastic-parser = { path="../elastic-parser" }
elastic-query-builder ="0.1.13"
elastic-parser ="0.1.8"

serde = "~1"
serde_json = "~1"
serde_derive = "1.0"

[dev-dependencies]
tokio = { version = "1.19.0", features = ["full"] }

