[package]
name = "uiuifree-elastic"
version = "0.2.33"
edition = "2021"

authors = ["uiuifree"]
description = "My ElasticSearch Util"
license = "MIT"

[dependencies]
dotenv = "0.15"
elasticsearch = "8.5.0-alpha.1"
#elastic-query-builder = { path="../elastic-query-builder" }
#elastic-parser = { path="../elastic-parser" }
elastic-query-builder = "0.1.39"
elastic-parser = "0.1.15"

serde = { version = "~1", features = ["derive"] }
serde_json = "~1"

[dev-dependencies]
tokio = { version = "~1", features = ["full"] }

